--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
+    "trix": "^2.1.15",
     "typescript": "^5.7.3"
   },
   "scripts": {
